{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerInputs",
            "id": "eabde8a3-7662-4d65-b5d1-e085a8ab55a4",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "d1182dff-5c88-48c8-8a08-eddf263678d4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Bucket",
                    "type": "Button",
                    "id": "e68a3484-a32c-4dc1-894c-276afae2e6b5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Tree",
                    "type": "Button",
                    "id": "187e4978-5fc5-4788-a324-387abe5262fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "House",
                    "type": "Button",
                    "id": "f5484207-7295-4d6e-9c38-ec9478289473",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Factory",
                    "type": "Button",
                    "id": "8541dd99-8b1f-4fb0-a577-9a77187e55cf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "1b7ccff8-7652-48c5-8cc9-48f9cd12d6e1",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "8f3e2855-2cbc-467a-976d-e5e1eb445cfa",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "df439dfe-40d6-4aaa-a708-2ee821ff4715",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "0a38733b-859d-4f25-a613-fa33f48e4469",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "71f74ccb-24c5-469b-8353-5babaf94c906",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8e0a59d6-f7fd-483c-86c9-915dc4599f66",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "Bucket",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f3d1cd46-5105-4ebe-90fb-5163f50132c6",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "Tree",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2dcc5f11-28c8-4980-b8f5-b7bcddab1906",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "House",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "86fcee07-ecbd-4efd-8976-818da453cc12",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "Factory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "New control scheme",
            "bindingGroup": "New control scheme",
            "devices": []
        }
    ]
}